# RTS2019

./: README.md
roborts_base/: CMakeLists.txt  package.xml  roborts_base_node.cpp  ros_dep.h
roborts_base/chassis/: chassis.cpp
roborts_base/gimbal/: gimbal.cpp  gimbal.h
roborts_base/referee/: referee.cpp  referee.h
roborts_base/roborts_sdk/hardware/: serial_device.h
roborts_base/roborts_sdk/protocol/: protocol.cpp  protocol.h  protocol_define.h
roborts_base/test/: CMakeLists.txt  base_test.cpp
roborts_base/test/config/: BaseControlParam.prototxt
roborts_base/test/proto/:  BaseControlParam.pb.cc   BaseControlParam.pb.h   BaseControlParam.proto
roborts_bringup/launch/: camera_test.launch  mapping.launch  mapping_stage.launch  nav313.launch  nav_xdu.launch  roborts.launch  roborts_manual.launch  stage_auto.launch  stage_manual.launch  static_tf.launch  test_base.launch  test_camera.launch  test_dev_ai.launch  test_dev_vision.launch  test_referee.launch  testloc.launch
roborts_bringup/maps/: 313.yaml  nav3.pgm  nav3.yaml  test.pgm  xdu_floor3.pgm  xdu_floor3.yaml
roborts_bringup/rviz/: loctest.rviz  roborts.rviz
roborts_camera/: camera_node.cpp  camera_param.cpp
roborts_camera/config/: camera_param.prototxt
roborts_camera/test/: image_capture.cpp
roborts_camera/uvc/: uvc_driver.cpp
roborts_costmap/config/: obstacle_layer_config.prototxt
roborts_decision/: CMakeLists.txt  behavior_test.cpp
roborts_decision/blackboard/: blackboard.h
roborts_decision/config/: decision.prototxt
roborts_decision/dev_ai_test/: CMakeLists.txt  ai_test.cpp  ai_test.h  gimbal_control.cpp  go_aim.cpp  go_nav.cpp
roborts_decision/dev_ai_test/config/: gimbal_control.prototxt
roborts_decision/dev_ai_test/proto/: gimbal_control.pb.cc  gimbal_control.pb.h  gimbal_control.proto
roborts_decision/dev_nav_test/: CMakeLists.txt
roborts_decision/dev_vision_test/: CMakeLists.txt  armor_detection_client.cpp  gimbal_control.cpp  gimbal_control.h  vision_test.cpp
roborts_decision/dev_vision_test/config/: gimbal_control.prototxt
roborts_decision/dev_vision_test/proto/: gimbal_control.pb.cc  gimbal_control.proto
roborts_detection/: CMakeLists.txt
roborts_detection/apriltags_detection/: CMakeLists.txt  apriltags_detection.cpp  apriltags_detection_node.cpp  apriltags_detection_node.h
roborts_detection/armor_detection/: CMakeLists.txt  armor_detection_base.h  armor_detection_node.cpp  armor_detection_node.h
roborts_detection/armor_detection/config/: armor_detection.prototxt
roborts_detection/armor_detection/constraint_set/: constraint_set.cpp  constraint_set.h
roborts_detection/armor_detection/constraint_set/config/: constraint_set.prototxt
roborts_detection/armor_detection/constraint_set/proto/: constraint_set.pb.cc  constraint_set.pb.h  constraint_set.proto  constraint_xdu.proto
roborts_detection/armor_detection/constraint_xdu/: armor_detect.h  armor_detect_node.cpp  armor_detect_node.h  constraint_xdu.h
roborts_detection/armor_detection/proto/: armor_detection.pb.cc  armor_detection.pb.h  armor_detection.proto
roborts_detection/test/: armor_detection_client.cpp  gimbal_control.cpp  gimbal_control.h
roborts_detection/test/config/: gimbal_control.prototxt
roborts_detection/util/: cv_toolbox.h
roborts_localization/: localization_node.cpp  localization_node.h
roborts_localization/amcl/: amcl.cpp  amcl.h
roborts_localization/amcl/config/: amcl.yaml
roborts_msgs/: CMakeLists.txt
roborts_msgs/action/: ArmorDetection.action  TagDetection.action
roborts_msgs/msg/: BattleField.msg  GimbalInfo.msg  Referee.msg
roborts_msgs/msg/referee_system/: ProjectileSupply.msg
roborts_multiwar/: CMakeLists.txt  package.xml
roborts_multiwar/launch/: multiwar.launch
roborts_multiwar/src/: net_client.cpp  net_server.cpp  rm_net.h
roborts_planning/global_planner/: CMakeLists.txt  global_planner_test.cpp
roborts_planning/global_planner/a_star_planner/config/: a_star_planner_config.prototxt
roborts_planning/global_planner/config/: global_planner_config.prototxt
roborts_planning/local_planner/src/: vel_converter.cpp
roborts_planning/local_planner/timed_elastic_band/config/: timed_elastic_band.prototxt
roborts_simulator/: CMakeLists.txt  package.xml
roborts_teleop/: CMakeLists.txt  package.xml
roborts_teleop/src/: roborts_teleop_node.cpp
rplidar_ros/: CMakeLists.txt
rplidar_ros/launch/: rplidar.launch  test_rplidar.launch  view_rplidar.launch
rplidar_ros/src/: node.cpp
rplidar_xdu/: CMakeLists.txt  package.xml
rplidar_xdu/launch/: hector_mapping.launch  rplidar.launch  test_rplidar.launch  view_rplidar.launch
rplidar_xdu/scripts/: create_udev_rules.sh
rplidar_xdu/src/: node.cpp
