<?xml version="1.0"?>
<package>
  <name>roborts_multiwar</name>
  <version>0.0.1</version>
  <description>Broadcasted by UDP between robots, which in the same wlan. </description>

  <maintainer email="lichunpeng2200@outlook.com">skystarry</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roborts_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roborts_msgs</run_depend>

</package>
